force-app/main/default/objects/OpportunityVehicle__c/OpportunityVehicle__c.object-meta.xml
<CustomObject>
    <description>Este objeto é a entidade de Veículos da oportunidade, nele é possível armazenar informações relacionado ao preço do veículo a ser negociado e etc.</description>
    <label>Veículo da Oportunidade</label>
    <nameField>
        <label>Nome do Veículo da Oportunidade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veículos da Oportunidade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>