force-app/main/default/objects/OpportunityVehicle__c/fields/AllowFieldsUpdateBypass__c.field-meta.xml
<CustomField>
    <fullName>AllowFieldsUpdateBypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo Bypass para permitir a atualização de alguns campos apenas quando o valor do mesmo for true.</description>
    <label>Allow Fields Update Bypass</label>
    <type>Checkbox</type>
</CustomField>