force-app/main/default/objects/OpportunityVehicle__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Armazena a porcentagem de desconto que deve ser aplicada.</description>
    <label>Desconto</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>