force-app/main/default/objects/OpportunityVehicle__c/fields/FipeReferencePrice__c.field-meta.xml
<CustomField>
    <fullName>FipeReferencePrice__c</fullName>
    <description>Campo que armazena o preço de referência FIPE do Veículo.</description>
    <label>Preço de Referência FIPE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>