force-app/main/default/objects/OpportunityVehicle__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Campo que gera a relação de Master Detail com o objeto de Oportunidade</description>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Veículos da Oportunidade</relationshipLabel>
    <relationshipName>OpportunityVehicles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>