force-app/main/default/objects/OpportunityVehicle__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relação de lookup com o objeto Product2</description>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Veículos da Oportunidade</relationshipLabel>
    <relationshipName>OpportunityVehicles</relationshipName>
    <type>Lookup</type>
</CustomField>