force-app/main/default/objects/OpportunityVehicle__c/fields/ProposedSalePrice__c.field-meta.xml
<CustomField>
    <fullName>ProposedSalePrice__c</fullName>
    <description>Campo que armazena o preço da venda Proposto.</description>
    <label>Preço de Venda Proposto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>