force-app/main/default/objects/OpportunityVehicle__c/validationRules/BlockSalesPriceBelowFIPE.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockSalesPriceBelowFIPE</fullName>
    <active>true</active>
    <description>O Preço de Venda Proposto não pode ser inferior ao Preço de referência FIPE.</description>
    <errorConditionFormula>ProposedSalePrice__c &lt;  FipeReferencePrice__c</errorConditionFormula>
    <errorDisplayField>ProposedSalePrice__c</errorDisplayField>
    <errorMessage>O valor não deve ser inferior ao Preço de referência FIPE</errorMessage>
</ValidationRule>