force-app/main/default/objects/OpportunityVehicle__c/validationRules/PreventManualUpdateRestrictedFields.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventManualUpdateRestrictedFields</fullName>
    <active>true</active>
    <description>Validation rule responsável por impedir o usuário de alterar os campos manualmente.</description>
    <errorConditionFormula>AND(
				AllowFieldsUpdateBypass__c  = false,
				OR(
				ISCHANGED(  ProposedSalePrice__c  ),
				ISCHANGED(  FipeReferencePrice__c  ),
			 ISCHANGED(  Discount__c  )
				)
)</errorConditionFormula>
    <errorMessage>Não é possível modificar esses campos manualmente, utilize o fluxo de venda da oportunidade.</errorMessage>
</ValidationRule>